--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,8 +14,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-is": "^17.0.2",
+    "react-leaf-carousel": "^3.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
